Build: added bartholemew app

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
                 <a class="navbar-brand js-scroll-trigger navbar-brand-vis" href="#page-top">BUILD-A-BUFFET</a>
                 <div>
                     <ul class="navbar-nav ml-auto align-vertically">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger bartholemew-menu" href=""><img src="{{ MEDIA_URL }}assets/img/bartholemew-sml.jpg" alt="bartholemew" height="36"></a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger bartholemew-menu" href="{% url 'bartholemew' %}"><img src="{{ MEDIA_URL }}assets/img/bartholemew-sml.jpg" alt="bartholemew" height="36"></a></li>
                     </ul>
                 </div>
                 <div>
@@ -160,7 +160,7 @@
                         </li>
                         <li class="nav-item my-auto"><a class="nav-link js-scroll-trigger" href="{% url 'service' %}">customer service</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="{% url 'basket' %}">basket</a></li>
-                        <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#bot">BUILD-A-BUFFET</a></li>
+                        <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="{% url 'bartholemew' %}">BUILD-A-BUFFET</a></li>
                     </ul>
                 </div>
             </div>
