Build: get started button on home.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase flex-margin-b">BUILD-A-BUFFET</h1>
                 <h2 class="mx-auto flex-margin-b">Handmade selections of delicious food, delivered to your door for: parties, weddings, functions and corporate events.</h2>
-                <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="#about">Get Started</a>
+                <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="{% url 'bartholemew' %}">Get Started</a>
             </div>
         </div>
     </header>
@@ -48,6 +48,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-blue">Options for all diets</h4>
                                 <p class="mb-0 text-blue">A full choice of vegetarian and vegan options, both hot and cold, with allergy advice* provided across the full range of allergens.
+                                    <br>
                                     <br>
                                     * although every care is taken in our production process, we cannot guarantee allergen free.</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
