--- a/bartholemew/templates/bartholemew/bartholemew.html
+++ b/bartholemew/templates/bartholemew/bartholemew.html
@@ -39,4 +39,5 @@
 {% block postloadjs %}
 <!-- Bartholemew -->
 <script src="{% static 'js/bartholemew.js' %}"></script>
+<script src="{% static 'js/validation.js' %}"></script>
 {% endblock %}
