--- a/bartholemew/static/css/bartholemew.css
+++ b/bartholemew/static/css/bartholemew.css
@@ -11,11 +11,12 @@
 .chatresponsebox {
     background-color: #eff4fa;
     margin-top: 1rem;
+    padding: 1rem 0;
 }
 .chat-button {
     height: 2rem;
     padding: 0 0.5rem;
-    margin: 0.15rem 0;
+    margin-bottom: 0.15rem;
 }
 
 @media screen and (orientation: landscape){
@@ -32,9 +33,6 @@
         flex: 0 0 100%;
         max-width: 50%
     }
-    .chatresponsebox {
-        padding: 1rem 0 1rem 15vw;
-    }
     .chatbox-container {
         width: 75vw;
     }
@@ -49,9 +47,6 @@
     .chatboxdiv, .chatimgdiv {
         flex: 0 0 100%;
         max-width: 100%
-    }
-    .chatresponsebox {
-        padding: 1rem 0 1rem 10vw;
     }
     .chatbox-container {
         width: 95vw;
