--- a/bartholemew/templates/bartholemew/bartholemew.html
+++ b/bartholemew/templates/bartholemew/bartholemew.html
@@ -20,14 +20,22 @@
         <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Build-a-Buffet</h1>
         <div class="chatbox-container row px-3 mx-auto">
             <div class="chatboxdiv">
-                <div class="chatbox px-4 py-4" id="chatbox">
+                <div class="chatbox text-blue px-4 py-4" id="chatbox">
                     Hi! I’m Bartholemew, Build-A-Buffet’s resident robo-chef.
                     Let me help you Build-A-Buffet that your guests will love.
                 </div>
+                <div class="hidden chatimgbox float-right mb-1" id="finalimgbox">
+                    <img class="chatbox-image float-right" src="{{ MEDIA_URL }}assets/img/bartholemew.jpg" alt="robochef image" />
+                </div>
             </div>
             <div class="chatimgdiv">
-                <div class="chatimgbox float-right mb-1">
+                <div class="chatimgbox float-right mb-1" id="chatimgbox">
                     <img class="chatbox-image float-right" src="{{ MEDIA_URL }}assets/img/bartholemew.jpg" alt="robochef image" />
+                </div>
+                <div class="hidden" id="chatsummary">
+                    <div class="chatsummary mx-4 text-blue px-4 py-4">
+                        Summary
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,9 +55,12 @@
                 <label for="maxGuests">Max:</label>
                 <input type="number" id="maxguests" name="maxguests" min="1" max="1000">
                 <button onclick="return guestsBart();" class="chat-button btn btn-primary px-3 ml-2" id="guestsbart" >Go</button>
+                <div class="tiptext pr-2">
+                    * if you're not sure of the exact number, just put a range, otherwise you can leave the Max box empty.
+                </div>
             </div>
             <div class="hidden pl-3" id="diet">
-                <div class="row align-vertically text-center">
+                <div class="row align-vertically text-center w-100">
                     <div class="col-3">
                         <label for="veganGuests">Vegan:</label>
                         <input type="number" id="veganGuests" name="veganGuests" min="1" max="999">
@@ -63,10 +74,34 @@
                         <input type="number" id="pescGuests" name="pescGuests" min="1" max="999">
                     </div>
                     <div class="col-3">
-                        <button onclick="return dietBart();" class="chat-button btn btn-primary px-3 ml-2" id="dietbart" >Go</button>
+                        <button onclick="return dietBart();" class="chat-button btn btn-primary px-3 mr-2" id="dietbart" >Go</button>
+                    </div>
+                    <div class="tiptext pr-2 pt-2 pt-md-0">
+                        * don't worry if you don't have the exact numbers, an approximation will be fine, or leave the boxes blank and we'll work it out for you.
                     </div>
                 </div>
             </div>
+            <div class="hidden" id="hotfood">
+                <div class="pl-3">
+                    <button class="chat-button btn btn-primary px-3" onclick="return hotBart('No');" >None</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return hotBart('Medium amount of');" >Medium</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return hotBart('Lots of');" >High</button>
+                    <div class="tiptext pr-2 pt-2 pt-md-0">
+                        * remember; you will need facilities for heating the food - it's all packaged in Ziplok<sup>TM</sup> microwaveable bags.
+                    </div>
+                </div>
+            </div>
+            <div class="hidden" id="allergy">
+                <div class="pl-3">
+                    <button class="chat-button btn btn-primary px-3" onclick="return allergyBart('none');" >None</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return allergyBart('medium');" >Medium</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return allergyBart('high');" >High</button>
+                    <div class="tiptext pr-2 pt-2 pt-md-0">
+                        * we take every care to keep food allergy free, but we cannot guarantee it. Please read here for more information...
+                    </div>
+                </div>
+            </div>
+            <button class="hidden chat-button btn btn-primary px-3 ml-3" id="finishbart" onclick="return finishbart();" >Finish</button>
         </div>
     </section>
 
