--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -50,7 +50,7 @@
                                 <p class="mb-0 text-blue">A full choice of vegetarian and vegan options, both hot and cold, with allergy advice* provided across the full range of allergens.
                                     <br>
                                     <br>
-                                    * although every care is taken in our production process, we cannot guarantee allergen free.</p>
+                                    <span class="text-xs-nav">* although every care is taken in our production process, we cannot guarantee allergen free.</span></p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                             </div>
                         </div>
