--- a/bartholemew/static/css/bartholemew.css
+++ b/bartholemew/static/css/bartholemew.css
@@ -1,17 +1,16 @@
 
-.chatbox, .chatsummary {
+.chatbox {
     display: flex;
     align-items: center;
     text-align: center;
     font-size: calc(10px + (22 - 10) * ((100vw - 300px) / 1620));
-    border: 1px solid #426765;
-    background-color: #f8f9fa;
-}
-.chatbox {
-    border-radius: 25%;
+    border-radius: 25px;
+    background-color: #eff4fa;
 }
 .chatsummary {
-    border-radius: 0.25rem;
+    text-align: center;
+    font-size: calc(10px + (22 - 10) * ((100vw - 300px) / 1620));
+    border-radius: 0.25rem; 
 }
 .chatresponsebox {
     background-color: #eff4fa;
@@ -29,7 +28,7 @@
     font-size: calc(8px + (18 - 8) * ((100vw - 300px) / 1620));
 }
 @media screen and (orientation: landscape){
-    .chatboxdiv {
+    .chatboxdiv, .chatsummaryhead {
         padding-top: 5vh;
     }
     .chatsummary {
@@ -65,6 +64,10 @@
     }
 }
 @media (min-width: 767px) {
+    .chatboxdiv, .chatimgdiv {
+        flex: 0 0 100%;
+        max-width: 50%
+    }
     .chatbox, .chatimgbox {
         max-width: 50vw;
     }
