Build: added alleries.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,6 +49,8 @@
                                 <h4 class="text-blue">Options for all diets</h4>
                                 <p class="mb-0 text-blue">A full choice of vegetarian and vegan options, both hot and cold, with allergy advice* provided across the full range of allergens.
                                     <br>
+                                    <br> Find out more <a href ="{% url 'allergies' %}">here</a> ...
+                                    <br>
                                     <br>
                                     <span class="text-xs-nav">* although every care is taken in our production process, we cannot guarantee allergen free.</span></p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
