--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10605,6 +10605,9 @@ body {
     text-align: center;
     display: none;
 }
+.img-allergy {
+    height: 30px;
+}
 
 @media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
     .masthead {
