Fix: typo on allergies.html

--- a/home/templates/home/allergies.html
+++ b/home/templates/home/allergies.html
@@ -14,7 +14,7 @@
 
 <section class="products-section bg-light">
     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Allergies</h1>
-    <p class="product-text-three mx-2 text-center mb-2 text-blue">Athough we can't guarantee allergy free, we label our food clearly give you all the information you need.</p>
+    <p class="product-text-three mx-2 text-center mb-2 text-blue">Athough we can't guarantee allergy free, we label our food clearly to give you all the information you need.</p>
     <p class="product-text-three mx-2 text-center mb-2 text-blue">As well as identifying: vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i> and pescetarian <i class="fas fa-fish"></i> dishes;<br>each of the individually Ziplok<sup>TM</sup> packaged items will have stickers showing the following...</p>
     <p class="product-text-two text-center text-blue">
         Celery <img class="img-allergy" src="{{ MEDIA_URL }}assets/img/celery.jpg" alt="celery" /><br>
@@ -33,6 +33,7 @@
         Soya <img class="img-allergy" src="{{ MEDIA_URL }}assets/img/soya.jpg" alt="soya" />
         <hr class="d-none d-lg-block mb-0 ml-0" />
     </p>
+    <p class="product-text-three mx-2 text-center mb-2 text-blue">The labels will also appear on the menu cards you set out with the dishes for your guests.</p>
     <div class="product-container row w-100 mx-0 justify-content-center mt-0 text-xl-left">
         <div class="col-lg-4">
         </div>
