Fix: errors in bartholemew.js and bartholemew.html

--- a/bartholemew/templates/bartholemew/bartholemew.html
+++ b/bartholemew/templates/bartholemew/bartholemew.html
@@ -49,8 +49,8 @@
                 <div class="pl-3">
                     <button class="chat-button btn btn-primary px-3" onclick="return eventBart('party');" >Party</button>
                     <button class="chat-button btn btn-primary px-3" onclick="return eventBart('wedding');" >Wedding</button>
-                    <button class="chat-button btn btn-primary px-3" onclick="return eventBart('funct');" >Function</button>
-                    <button class="chat-button btn btn-primary px-3" onclick="return eventBart('corporate');" >Corporate</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return eventBart('function');" >Function</button>
+                    <button class="chat-button btn btn-primary px-3" onclick="return eventBart('corporate event');" >Corporate</button>
                 </div>
             </div>
             <div class="hidden pl-3" id="guests">
