Build: added allergy advice to products templates

--- a/home/templates/home/allergies.html
+++ b/home/templates/home/allergies.html
@@ -15,7 +15,7 @@
 <section class="products-section bg-light">
     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Allergies</h1>
     <p class="product-text-three mx-2 text-center mb-2 text-blue">Athough we can't guarantee allergy free, we label our food clearly to give you all the information you need.</p>
-    <p class="product-text-three mx-2 text-center mb-2 text-blue">As well as identifying: vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i> and pescetarian <i class="fas fa-fish"></i> dishes;<br>each of the individually Ziplok<sup>TM</sup> packaged items will have stickers showing the following...</p>
+    <p class="product-text-three mx-2 text-center mb-2 text-blue">As well as identifying: vegan <i class="fas fa-carrot"></i>, vegetarian <i class="fas fa-leaf"></i>, pescetarian <i class="fas fa-fish"></i> and allergy-advice <i class="fas fa-allergies"></i> dishes;<br>each of the individually Ziplok<sup>TM</sup> packaged items will have stickers showing the following...</p>
     <p class="product-text-two text-center text-blue">
         Celery <img class="img-allergy" src="{{ MEDIA_URL }}assets/img/celery.jpg" alt="celery" /><br>
         Cereals containing gluten <img class="img-allergy" src="{{ MEDIA_URL }}assets/img/gluten.jpg" alt="gluten" /><br>
