--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -44,7 +44,22 @@
                                     <div class="product-text-two mx-auto flex-margin-b text-blue">
                                         {{ product.description }}
                                     </div>
+                                    <div class="allergy-text text-lightblue">
+                                        {% if product.allergies|slice:"0:1" == '1' %}
+                                            <i class="fas fa-carrot"></i> vegan 
+                                        {% endif %}
+                                        {% if product.allergies|slice:"1:2" == '1' %}
+                                            <i class="fas fa-leaf"></i> vegetarian 
+                                        {% endif %}
+                                        {% if product.allergies|slice:"2:3" == '1' %}
+                                            <i class="fas fa-fish"></i> pescetarian 
+                                        {% endif %}
+                                        {% if product.allergies|slice:"3:4" == '1' %}
+                                            <i class="fas fa-allergies"></i> allergy advice 
+                                        {% endif %}
+                                    </div>
                                 {% endfor %}
+                                <br>
                                 <div class="text-blue text-xs mb-2">
                                     Choose from the options below...
                                 </div>
