--- a/checkout/templates/checkout/order_success.html
+++ b/checkout/templates/checkout/order_success.html
@@ -35,7 +35,7 @@
                                         {{ item.category.title }}: {{ item.name }}
                                     </div>
                                     {% for product in products %}
-                                        {% if product.name == item.name %}
+                                        {% if product.name == item.name and product.category|slugify == item.category %}
                                             <div class="product-text-three mx-auto mb-2 text-blue">
                                                 {{ product.description }}
                                             </div>
