--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -63,7 +63,9 @@
                                 {% endfor %}
                                 <br>
                                 <div class="text-blue text-xs mb-2">
-                                    Choose from the options below...
+                                    {% if option.category|slugify == category %}
+                                        Choose from the options below...
+                                    {% endif %}
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
@@ -134,37 +136,45 @@
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">
-                                                per serving
-                                            </div>
-                                            <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">
-                                                £{{ product.price }}
-                                            </div>
+                                            {% if product.category|slugify == category %}
+                                                <div class="text-blue text-xs">
+                                                    per serving
+                                                </div>
+                                                <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                    £{{ product.price }}
+                                                </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">
-                                                Total price
-                                            </div>
-                                            <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">
-                                                £{{ product.price }}
-                                            </div>
+                                            {% if product.category|slugify == category %}
+                                                <div class="text-blue text-xs">
+                                                    Total price
+                                                </div>
+                                                <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                    £{{ product.price }}
+                                                </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         <div class="text-blue text-xs">
                                             Add to
                                         </div>
-                                        <form action="{% url 'basket' %}?product_add={{ category }},{{ product }},{{ selected }}" method="post">
-                                            {% csrf_token %}
-                                            <div>
-                                                <input type="text" name="servings" id="servings" class="hidden" value="1">
-                                                <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
-                                                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
-                                                </button>
-                                            </div>
-                                        </form>
+                                        {% for product in products %}
+                                            {% if product.category|slugify == category %}
+                                                <form action="{% url 'basket' %}?product_add={{ category }},{{ product }},{{ selected }},{{ product.id_no }}" method="post">
+                                                    {% csrf_token %}
+                                                    <div>
+                                                        <input type="text" name="servings" id="servings" class="hidden" value="1">
+                                                        <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
+                                                            <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
+                                                        </button>
+                                                    </div>
+                                                </form>
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
