--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -32,7 +32,7 @@
                                     {% for basket in baskets %}
                                         <div class="product-text-two mx-auto mb-2 text-blue bold">{{ basket.category.title }}: {{ basket.name }}</div>
                                         {% for product in products %}
-                                            {% if product.name == basket.name %}
+                                            {% if product.name == basket.name and product.category|slugify == basket.category %}
                                                 <div class="product-text-three mx-auto mb-2 text-blue">{{ product.description }}</div>
                                                 <div class="allergy-text text-lightblue">
                                                     {% if product.allergies|slice:"0:1" == '1' %}
@@ -51,7 +51,12 @@
                                             {% endif %}
                                         {% endfor %}
                                         <br>
-                                        <div class="text-blue text-xs mb-2">With this option ...
+                                        <div class="text-blue text-xs mb-2">
+                                            {% for option in options %}
+                                                {% if option.category|slugify == basket.category %}
+                                                    With the option:
+                                                {% endif %}
+                                            {% endfor %}
                                             {% if basket.option == "selected-one" %}
                                                 {% for option in options %}
                                                     {% if option.category|slugify == basket.category %}
