Fix: edit_product.html errors

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -96,12 +96,16 @@
                                                 <div class="product-text-header bold">£{{ basket.total_price }}</div>
                                             </div>
                                             <div class="col-4 my-auto py-auto">
-                                                <a class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
-                                                    href="{% url 'edit_basket_item' %}?item_number={{ basket.id }}">
-                                                    <i class="fas fa-edit" aria-hidden="true"></i> edit</a>
-                                                <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
-                                                    href="{% url 'delete_basket_item' %}?delete_item={{ basket.id }}">
-                                                    <i class="fas fa-trash-alt" aria-hidden="true"></i> remove</a>
+                                                {% for product in products %}
+                                                    {% if product.name == basket.name and product.category|slugify == basket.category %}
+                                                        <a class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
+                                                            href="{% url 'edit_basket_item' %}?item_number={{ basket.id }},{{ product.id_no }}">
+                                                            <i class="fas fa-edit" aria-hidden="true"></i> edit</a>
+                                                        <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" 
+                                                            href="{% url 'delete_basket_item' %}?delete_item={{ basket.id }},{{ product.id_no }">
+                                                            <i class="fas fa-trash-alt" aria-hidden="true"></i> remove</a>
+                                                    {% endif %}
+                                                {% endfor %}
                                             </div>
                                         </div>
                                         <hr>
