--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -38,30 +38,34 @@
                         <div class="d-flex h-100">
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
                                 {% for product in products %}
-                                    <div class="product-text-header mx-auto flex-margin-b text-blue">
-                                        {{ product.name }}
-                                    </div>
-                                    <div class="product-text-two mx-auto flex-margin-b text-blue">
-                                        {{ product.description }}
-                                    </div>
-                                    <div class="allergy-text text-lightblue">
-                                        {% if product.allergies|slice:"0:1" == '1' %}
-                                            <i class="fas fa-carrot"></i> vegan 
-                                        {% endif %}
-                                        {% if product.allergies|slice:"1:2" == '1' %}
-                                            <i class="fas fa-leaf"></i> vegetarian 
-                                        {% endif %}
-                                        {% if product.allergies|slice:"2:3" == '1' %}
-                                            <i class="fas fa-fish"></i> pescetarian 
-                                        {% endif %}
-                                        {% if product.allergies|slice:"3:4" == '1' %}
-                                            <i class="fas fa-allergies"></i> allergy advice 
-                                        {% endif %}
-                                    </div>
+                                    {% if product.category|slugify == category %}
+                                        <div class="product-text-header mx-auto flex-margin-b text-blue">
+                                            {{ product.name }}
+                                        </div>
+                                        <div class="product-text-two mx-auto flex-margin-b text-blue">
+                                            {{ product.description }}
+                                        </div>
+                                        <div class="allergy-text text-lightblue">
+                                            {% if product.allergies|slice:"0:1" == '1' %}
+                                                <i class="fas fa-carrot"></i> vegan 
+                                            {% endif %}
+                                            {% if product.allergies|slice:"1:2" == '1' %}
+                                                <i class="fas fa-leaf"></i> vegetarian 
+                                            {% endif %}
+                                            {% if product.allergies|slice:"2:3" == '1' %}
+                                                <i class="fas fa-fish"></i> pescetarian 
+                                            {% endif %}
+                                            {% if product.allergies|slice:"3:4" == '1' %}
+                                                <i class="fas fa-allergies"></i> allergy advice 
+                                            {% endif %}
+                                        </div>
+                                    {% endif %}
                                 {% endfor %}
                                 <br>
                                 <div class="text-blue text-xs mb-2">
-                                    Choose from the options below...
+                                    {% if option.category|slugify == category %}
+                                        Choose from the options below...
+                                    {% endif %}
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
@@ -132,37 +136,45 @@
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">
-                                                per serving
-                                            </div>
-                                            <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">
-                                                £{{ product.price }}
-                                            </div>
+                                            {% if product.category|slugify == category %}
+                                                <div class="text-blue text-xs">
+                                                    per serving
+                                                </div>
+                                                <div id="serving-price"  class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                    £{{ product.price }}
+                                                </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         {% for product in products %}
-                                            <div class="text-blue text-xs">
-                                                Total price
-                                            </div>
-                                            <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">
-                                                £{{ total_price }}
-                                            </div>
+                                            {% if product.category|slugify == category %}
+                                                <div class="text-blue text-xs">
+                                                    Total price
+                                                </div>
+                                                <div id="total-price" class="price-button border-solid js-scroll-trigger flex-margin-b bold">
+                                                    £{{ total_price }}
+                                                </div>
+                                            {% endif %}
                                         {% endfor %}
                                     </div>
                                     <div class="col-4 flex-margin-t">
                                         <div class="text-blue text-xs">
                                             Update
                                         </div>
-                                        <form action="{% url 'basket' %}?product_edit={{ category }},{{ product }},{{ selected }},{{ item_number }}" method="post">
-                                            {% csrf_token %}
-                                            <div>
-                                                <input type="text" name="servings" id="servings" class="hidden" value="{{ servings }}">
-                                                <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
-                                                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
-                                                </button>
-                                            </div>
-                                        </form>
+                                        {% for product in products %}
+                                            {% if product.category|slugify == category %}
+                                                <form action="{% url 'basket' %}?product_edit={{ category }},{{ product }},{{ selected }},{{ item_number }},{{ product.id_no }}" method="post">
+                                                    {% csrf_token %}
+                                                    <div>
+                                                        <input type="text" name="servings" id="servings" class="hidden" value="{{ servings }}">
+                                                        <button type="submit" class="product-selected border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
+                                                            <i class="fa fa-shopping-basket" aria-hidden="true"></i> basket
+                                                        </button>
+                                                    </div>
+                                                </form>
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
