--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -85,7 +85,7 @@
                                         <div class="row">
                                             <div class="col-4 my-auto">
                                                 {% for product in products %}
-                                                    {% if product.name == basket.name %}
+                                                    {% if product.name == basket.name and product.category|slugify == basket.category %}
                                                         <div class="text-blue text-xs">per serving</div>
                                                         <div class="product-text-two mt-1">£{{ product.price }}</div>
                                                     {% endif %}
