--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -100,7 +100,7 @@
                                         <div class="row">
                                             <div class="col-6 my-auto">
                                                 {% for product in products %}
-                                                    {% if product.name == basket.name %}
+                                                    {% if product.name == basket.name and product.category|slugify == basket.category %}
                                                         <div class="text-blue text-xs">
                                                             per serving
                                                         </div>
